--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  #
   # Projects sections
   #
   projects:
@@ -25,6 +26,9 @@ en:
       stages: "Stages"
       dashboard: "Dashboard"
       documents: "Documents"
+    #
+    # Stage 1
+    #
     stage1:   # http://localhost:3000/projects/1/stage1
       projects: "Projects"
       stage1: "Stage 1"
@@ -60,6 +64,147 @@ en:
       save_button: "Save"
       cancel_button: "Cancel"
     explanation:  #tab `Explanation & Examples` of stage 1
+      explanation: "Explanation"
+      title1: "Which real-world problem children are facing that you want to address?"
+      title1_description: |
+                          <p>A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)</p>
+      title2: "Which are the policy-related causes of the real-world problem?"
+      title2_description: |
+                          <p>Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem.</p>
+                          <p>To conduct the problem analysis, you can use a problem tree. The problem tree is a well-known tool that “will help advocates understand the immediate, underlying and root causes of the issue, as well as help in gathering information to support the analysis”.</p>
+      title3: "Which policy solutions would constitute an appropriate response?"
+      title3_description: |
+                          <p>What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?</p>
+                          <p>The policy solutions usually refer to:</p>
+                          <ul>
+                            <li>Policy development (ex. Development of a nutrition national plan)</li>
+                            <li>Placement on the policy agenda. (Ex: Official paper on new financing mechanisms)</li>
+                            <li>Policy adoption. (Ex: approval of equal pay act)</li>
+                            <li>Policy blocking: (Ex. Rejection of anti-homosexuality bill)</li>
+                            <li>Policy implementation: (Ex. Implementation of regulations forbidding summary deportations by the police)</li>
+                            <li>Policy maintenance. (Ex.: No reduction of budgets for child protection policies)</li>
+                          </ul>
+                          <p>In those contexts where a policy change may be too ambitious, an organization may aim for a discursive change (which should pave the way for a policy change in the longer run). For instance, for many years, given the lack of options to achieve change on policies related to tax heavens, organizations working on tax justice focused their advocacy efforts on a change in the discourse in the society so tax havens were seen by the majority as an unacceptable practice that distract critical resources for the countries to pay for social services. These efforts built the ground for changes in policy later on when opportunities appeared (i.e. with the 2008 financial crisis).</p>
+      example: "Example"
+      real_world_problem: "Real-world problem"
+      real_world_problem_description: |
+                          <p>Increasing mother to child transmission of HIV in country AEIOU during the last 3 years</p>
+                          <h4>Policy dimensions of the problem</h4>
+                          <ul>
+                            <li>Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</li>
+                            <li>Health insurance law does not cover informal workers and many women at risk belong to this group. (Therefore, due to limited capacity to cover out-of-pocket expenditures women with little resources do not attend clinics for HIV testing and treatment)</li>
+                            <li>PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it.</li>
+                            <li>Current legal framework stipulates detention for sex workers (after 3 monetary sanctions), which prevents sex workers to attend health services due to fear of being denounced. </li>
+                          </ul>
+      policy_solutions: "Policy Solutions"
+      policy_solutions_description: |
+                          <ul>
+                            <li>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers</li>
+                            <li>Revision of the National HIV Strategy </li>
+                            <li>Health insurance policy framework revised to cover disadvantaged informal workers</li>
+                            <li>Increase donor funding on PMTCT</li>
+                          </ul>
+    #
+    # Stage 2
+    #
+    stage2:   # http://localhost:3000/projects/1/stage2
+      projects: "Projects"
+      stage2: "Stage 2"
+      title: "What policy changes will you focus your advocacy efforts on?"
+      description: "Advocacy planning involves defining and building consensus on the key policy changes to be achieved. The strategic selection of a few key objectives helps you make an efficient use of available resources and maximize existing opportunities."
+      subtitle1: "Formulate the real world problem as a goal"
+      subtitle1_tooltip: "The goals are the big changes and benefits being sougth for women and children, or in services and systems, as a result of advocacy objectives. Goal indicates what will happen after the advocacy objective/s is/are achieved. You should turn the real world problem into the desired real world change you want to contribute to through your advocacy."
+      subtitle2: "Formulate the policy solutions as objectives"
+      subtitle2_tooltip: "The advocacy objectives are what the organization aims to achieve over several years (usually 3-5). It is the overall policy change that is desired as a result of advocacy effort."
+      data_entry: "Data Entry"
+      explanation_examples: "Explanation & Examples"
+      add_objective_button: "Add Objective"
+      policy_solutions_button: "Policy Solutions"
+      without_objectives_begin_sentence: "There are still "
+      without_objectives_end_sentence: " policy solutions without objectives"
+      objectives: "Objectives"
+      subtotal_key_contribution: "Subtotal Key Contribution"
+      subtotal_momentum: "Subtotal Momentum"
+      subtotal_comparative_advantage: "Subtotal Comparative Advantage"
+      total: "Total"
+      prioritized: "Prioritized"
+      policy_solutions: "Policy Solutions"
+      actions: "Actions"
+    goal_modal: # modal `goal` of stage 2
+      goal: "Goal"
+      title: "Title"
+      title_placeholder: "Enter a goal for a problem"
+      save_button: "Save"
+      cancel_button: "Cancel"
+    solutions_list_modal:  # modal `solutions` of stage 2
+      solutions: "Solutions"
+      title: "Title"
+      description: "Description"
+      back_button: "Back"
+    objective_modal: # modal `add objective` of stage 2
+      objective: "Objective"
+      select_solution: "Select Solution"
+      objective_type: "Objective Type"
+      objective_placeholder: "Add any important objective info"
+      key_contribution: "KEY CONTRIBUTION: is the advocacy objective a key contribution to the problem?"
+      big_difference: "<p><strong>Big difference:</strong> Would success on the advocacy objective make a significant difference in addressing the problem children face (assess in comparison with other objectives)?</p>"
+      score: "Score"
+      score_placeholder: "Enter number 1 to 3"
+      main_arguments: "Main arguments"
+      main_arguments_placeholder: "Enter Main Arguments"
+      multiplying_effect: "<p><strong>Multiplying effect:</strong> Would it address several important real world problems at the same time? (at national level and/or at national and global level)</p>"
+      catalytic: "<p><strong>Catalytic:</strong> Is achieving this particular advocacy objective almost a precondition for tackling other UNICEF advocacy objectives (e.g. policy adoption is a precondition for funding)?</p>"
+      momentum: "MOMENTUM: Does the advocacy objective have enough momentum, or can momentum be generated?"
+      demand: |
+              <p><strong>Demand:</strong> Is there demand to carry the advocacy objective forward?</p>
+              <ul>
+                <li>Are there specific champions pushing the issue (governments; policy-makers; influential figures; etc.)?</li>
+                <li>Are rights-holders (including children) articulating specific demands to duty-bearers?</li>
+                <li>Are other important constituencies pushing policy-makers?</li>
+                <li>Is there sufficient public awareness?</li>
+              </ul>
+      hooks_processes: |
+              <p><strong>Hooks & processes:</strong></p>
+              <ul>
+                <li>Are there legislative or policy processes (national, regional or global) that open windows of opportunity to push for the advocacy objective?</li>
+                <li>Has a UN Treaty Body, such as the Committee on the Rights of the Child, addressed the issue as part of country reporting or a General Comment?</li>
+              </ul>
+      intuitive: |
+              <p><strong>Intuitive:</strong> Is the issue behind the advocacy objective easy to communicate and understand, or can we get it to be?</p>
+              <ul>
+                <li>Can the issue and the proposal be articulated in a compelling narrative?</li>
+                <li>Is it an issue that has the potential to generate compassion and solidarity?</li>
+              </ul>
+      comparative_advantage: "Comparative Advantage: Does UNICEF have a mandate and comparative advantage with regard"
+      alignment: |
+              <p><strong>Alignment:</strong></p>
+              <ul>
+                <li>Is it consistent with UNICEF’s mandate (CRC and SDGs)?</li>
+                <li>Is there a clear case under Convention on the Rights of Children (CRC)?</li>
+                <li>Is it part of UNICEF’s existing medium- and long-term strategy and commitments, including the Strategic Plan?</li>
+                <li>Does it contribute to reduce disparities?</li>
+                <li>Are there synergies with other UNICEF agendas, e.g. existing fundraising schemes?</li>
+                <li>Do we have senior management buy-in?</li>
+              </ul>
+      added_value: |
+              <p><strong>Added value:</strong> Can UNICEF add value to the voices of other stakeholders in the pursuit of the advocacy objective?</p>
+              <ul>
+                <li>Is the issue behind the advocacy objective being addressed by anybody? If so, is it being approached appropriately (e.g. rights-based approach)?</li>
+                <li>Do we have, or can we generate, the data and evidence to make a robust case?</li>
+                <li>Do we have the technical expertise? </li>
+                <li>Are we able to convene key partners?</li>
+              </ul>
+      loss_or_gain: |
+              <p><strong>Loss or gain:</strong> Does UNICEF have a lot to gain (or a lot to lose) from pursuing (or not pursuing) the advocacy objective? </p>
+              <ul>
+                <li>Can the issue help raise UNICEF’s profile, or allow UNICEF to position itself strategically?</li>
+                <li>Are there synergies with other UNICEF agendas, e.g. existing fundraising schemes?</li>
+                <li>Is it an issue that UNICEF can’t be seen to be silent on (UNICEF must be there)?</li>
+                <li>Are there significant risks for UNICEF, including from not engaging on the issue? </li>
+              </ul>
+      save_button: "Save"
+      cancel_button: "Cancel"
+    explanation_stage2:  #tab `Explanation & Examples` of stage 2
       explanation: "Explanation"
       title1: "Which real-world problem children are facing that you want to address?"
       title1_description: |
