added i18n support in stage 6 views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -494,7 +494,7 @@ en:
       outcome: "Outcome"
       save_button: "Save"
       cancel_button: "Cancel"
-    explanation_stage5:
+    explanation_stage5: #tab `Explanation & Examples` of stage 5
       title: "Explanation"
       subtitle1: "What will you do to achieve your advocacy objectives?"
       subtitle1_explanation: <p>Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes.</p>
@@ -711,3 +711,73 @@ en:
                 <td></td>
               </tr>
       after_months_table_description: <p><strong>*</strong> Engage with affected people groups and strengthen their knowlegde about the opportunity for change+ Identification of spokepersons among affected people- training on communications.</p>
+    #
+    # Stage 6
+    #
+    stage6: # http://localhost:3000/projects/1/objectives/1/stage6
+      projects: "Projects"
+      stage6: "Stage 6"
+      title: "What do you want the target audience to do?"
+      title_description: "Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes."
+      subtitle1: "What will the ask for each actor?"
+      subtitle1_explanation: "The Ask should be clear, concise, solution-focused, and tailored to each actor."
+      data_entry: "Data Entry"
+      explanation_examples: "Explanation & Examples"
+      workshop_tips: "Workshop Tips"
+      add_button: "Add"
+      actor: "Actor"
+      ask: "Ask"
+      actions: "Actions"
+    asks_modal: # modal 'add ask' of stage 6
+      asks: "Asks"
+      actor: "Actor"
+      ask: "Ask"
+      ask_placeholder: "Write ask"
+      save_button: "Save"
+      cancel_button: "Cancel"
+    explanation_stage6: #tab `Explanation & Examples` of stage 6
+      title: "Explanation"
+      subtitle1: "What do you want the target audience to do?"
+      subtitle1_explanation:  |
+                    <p>After you have identified the target audiences/critical players (actors who bring about the change you aim for and those who can influence them) you should define the “asks” for each of them. These are the actions you want them to understake to support the achievement of your advocacy objective. They should be clear, concise, solution-focused, and tailored to each actor.</p>
+                    <p>Communication specialists will craft powerful messages based on the information obtained in the previous steps, the “asks” that you will define at this stage, and other relevant information, such as the motivation of the audience or the communication channel. Having a broad range of solid messages ready to be used is necessary for your advocacy efforts. You can then communicate them in a number of formats (lobby meetings, letters, interviews in the media, etc).</p>
+      example: "Example"
+      actors_ask_table_content: |
+                    <tr>
+                      <th>Actors</th>
+                      <th>Ask</th>
+                    </tr>
+                    <tr>
+                      <td>Minister of Health</td>
+                      <td>To support the review of the policy framework on HI and recommend extension of coverage for informal workers in the report submitted to the NA by the Government</td>
+                    </tr>
+                    <tr>
+                      <td>Members of Parliament</td>
+                      <td>To support the review of the policy framework on HI and recommend extension of coverage for informal workers in the report on the 5 year review of the Law <br>
+                      To invite UNICEF or partners to prepare and deliver report on the issue
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Director of the Department</td>
+                      <td>To publicly advocate for the issue. </td>
+                    </tr>
+                    <tr>
+                      <td>INGO “X”</td>
+                      <td>To join forces with the UN to use the 5-year review of the Law on HI to advocate for the expansion of the HI coverage to informal workers and their families. </td>
+                    </tr>
+                    <tr>
+                      <td>UN Agencies</td>
+                      <td>To join forces within UN to use the 5-year review of the Law on HI to advocate for the expansion of the HI coverage to informal workers and their families. </td>
+                    </tr>
+                    <tr>
+                      <td>Neutral media</td>
+                      <td>To give voice to informal workers who relate their stories regarding the (lack of) access to expensive health services <br>
+                      To join UN and INGO “X” in a field visit with the option of producing a documentary with the participation of …
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>Affected groups of people</td>
+                      <td>To tell their stories to decision makers and the media <br>
+                      To build their communication skills and knowledge on the issue (offering to participate in workshops to be organized by UN and INGO “X”)
+                      </td>
+                    </tr>
