--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -783,3 +783,9 @@ en:
                       To build their communication skills and knowledge on the issue (offering to participate in workshops to be organized by UN and INGO “X”)
                       </td>
                     </tr>
+  user_mailer:
+    exist_user_share:
+      exist_add_to_share: 'You are invited to collaborate in the proyect:'
+    new_user_share:
+      new_add_to_share: 'You are invited to activate your account and collaborate in the proyect:'
+      activate_account: 'Activate my account'
