--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,6 +55,20 @@ en:
       explanation_examples: "Explanation & Examples"
       workshop_tips: "Workshop Tips"
       policies_text: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
+      error_focus_area: "Error while getting focus area information"
+      error_project: "Error while getting the project information"
+      error_policy_problems: "Error while getting policy problems information"
+      error_solutions: "Error while getting solutions information"
+      error_solution: "Error while getting a solution information"
+      error_updating: "Error while updating information"
+      error_insert: "Error while insert information"
+      error_updating_policy: "Error while updating a policy information"
+      error_creating_policy: "Error while creating a policy information"
+      error_updating_solution: "Error while updating a solution information"
+      error_creating_solution: "Error while creating a solution information"
+      error_getting_policy: "Error while getting the policy problem information"
+      confirm_delete_solution: "Are you sure you want to delete this solution?"
+      confirm_delete_policy: "Are you sure you want to delete this policy problem?"
     policy_modal: # modal `add policy` of stage 1
       policy: "Policy"
       title: "Title"
