added stage 2 messages to i18n dictionary

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -148,6 +148,16 @@ en:
       prioritized: "Prioritized"
       policy_solutions: "Policy Solutions"
       actions: "Actions"
+      error_focus_area: "Error while getting focus area information"
+      error_objective_types: "Error while getting objective types information"
+      error_project: "Error while getting the project information"
+      error_creating_real_problem: "Error while creating the real problem information"
+      error_getting_real_problem: "Error while getting the real problem information"
+      error_getting_objectives: "Error while getting objectives information"
+      error_getting_solutions: "Error while getting solutions information"
+      error_updating_objective: "Error while updating objective information"
+      error_creating_objective: "Error while creating objective information"
+      error_updating_goal: "Error while updating the goal information"
     goal_modal: # modal `goal` of stage 2
       goal: "Goal"
       title: "Title"
