--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -304,6 +304,16 @@ en:
       barriers: "Barriers"
       description: "Description"
       enabling_factors: "Enabling Factors"
+      error_getting_project: "Error while getting project information"
+      error_getting_objectives: "Error while getting objectives information"
+      error_getting_actors: "Error while getting actors information"
+      error_getting_actor_supports: "Error while getting actor supports information"
+      error_getting_actor_influence_levels: "Error while getting actor influence levels information"
+      error_updating_actor: "Error while updating actor information"
+      error_updating_enabling_factors: "Error while updating enabling factors or/and barriers information"
+      confirm_delete_actor: "Are you sure you want to delete this actor?"
+      confirm_delete_enabling_factor: "Are you sure you want to delete this enabling factor?"
+      confirm_delete_barrier: "Are you sure you want to delete this enabling factor?"
     actors_modal:  # modal `add actor` of stage 3
       actor: "Actor"
       actor_type: "Actor Type"
