--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -400,6 +400,12 @@ en:
       actor_type: "Actor Type"
       activities_number: "Activities Number"
       actions: "Actions"
+      error_getting_actor_type: "Error while getting actor type information"
+      error_getting_outcomes: "Error while getting outcomes information"
+      error_getting_categories: "Error while getting categories information"
+      error_updating_outcome: "Error while updating the outcome information"
+      error_creating_outcome: "Error while creating the outcome information"
+      confirm_delete_outcome: "Are you sure you want to delete this outcome?"
     outcome_modal:  # modal `add new interim outcome` of stage 4
       new_interim_outcome: "New Interim Outcome"
       interim_outcome: "Interim Outcome"
