--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -529,6 +529,12 @@ en:
       outcomes: "Outcomes"
       actions: "Actions"
       trello: "Organize in Trello"
+      error_getting_outcomes: "Error while getting outcomes information"
+      error_getting_asks: "Error while getting asks information"
+      error_getting_activities: "Error while getting activities information"
+      error_updating_activity: "Error while updating activity information"
+      error_creating_activity: "Error while creating activity information"
+      confirm_delete_activity: "Are you sure you want to delete this activity?"
     modal_activity: # modal 'activities' of stage 5
       activities: "Activities"
       title: "Title"
